Fix overflowing images of post.

--- a/main/static/css/post_view.css
+++ b/main/static/css/post_view.css
@@ -12,6 +12,10 @@
     padding: 14px;
 }
 
+.post-content img {
+    width: -webkit-fill-available;
+}
+
 #comment_box {
     border-radius: 8px;
 }
